header icon align fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,12 @@
         padding: 32px 0;
 }
 
+.header-contacts {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .contact-list-item:not(:last-child) {
     margin-right: 50px;
 }
